# dsinput

./: .clang-format  .gitattributes  .gitignore  LICENSE  README.md  README.txt  TODO.txt
client-nds/: Makefile  dsinput.conf
client-nds/arm7/: Makefile
client-nds/arm7/source/: main7.cpp
client-nds/arm9/: Makefile
client-nds/arm9/include/: app.hpp  app_config.hpp  fs.hpp
client-nds/arm9/source/: app.cpp  app_config.cpp  fs.cpp  main9.cpp
server/: meson.build
server/inc/: button.hpp  udp_server.hpp  vcontroller.hpp
server/src/: main.cpp  server.cpp  udp_server_linux.cpp  vcontroller_linux.cpp
